# tsedl

media_serializer/audio_watcher/: README.md  environment.yml  pyproject.toml  video.xml  watcher.py
media_serializer/audio_watcher/watcher/: __init__.py  mv.py  processor.py
