[tool.poetry]
name = "video_watcher"
version = "0.1.0"
description = ""
authors = ["Ari <me@ari.io>"]

[tool.poetry.dependencies]
python = "^3.8"
ffmpeg = "^1.4"
pandas = "^1.4.2"
watchfiles = "^0.13"
ffmpeg-python = "^0.2.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
